Aplicar clases y estilos de manera dinámica

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <meta name="description" content="Basic to-do app with Vue.js 2.1">
   <meta name="author"  content="https://styde.net">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="check.png" />
 
   <title>Lección 1 - Vue 2 - Styde.net</title>
 
@@ -36,7 +36,7 @@
     <div>
       <h4>Bienvenido, [nombre completo]</h4>
     </div>
-    <footer class="footer">
+    <footer>
       <p>&copy; 2017 Styde.net</p>
     </footer>
   </div>
