--- a/jquery.html
+++ b/jquery.html
@@ -7,7 +7,7 @@
 
   <meta name="description" content="Basic to-do app with Vue.js 2.1">
   <meta name="author"  content="https://styde.net">
-  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="check.png" />
 
   <title>Lección 1 - Vue 2 - Styde.net</title>
 
