--- a/todoapp-crud.html
+++ b/todoapp-crud.html
@@ -22,36 +22,7 @@
     <h2>Tareas</h2>
 
     <ul class="list-group tasks">
-      <li class="list-group-item" v-for="(task, index) in tasks"
-            :class="{ editing: task.editing, completed: !task.pending }">
-        <a @click="toggleStatus(task)">
-          <app-icon :img="task.pending ? 'unchecked' : 'check' "></app-icon>
-        </a>
-
-        <template v-if="!task.editing">
-          <span class="description">{{ task.description }}</span>
-          <div>
-            <a @click="editTask(task)">
-              <app-icon img="edit"></app-icon>
-            </a>
-            <a @click="deleteTask(index)">
-              <app-icon img="trash"></app-icon>
-            </a>
-          </div>
-        </template>
-
-        <template v-else>
-          <input type="text" v-model="draft">
-          <div>
-            <a @click="updateTask(task)">
-              <app-icon img="ok"></app-icon>
-            </a>
-            <a @click="cancelUpdate(task)">
-              <app-icon img="remove"></app-icon>
-            </a>
-          </div>
-        </template>
-      </li>
+      <li is="app-task" v-for="(tarea, indice) in tasks" :tasks="tasks" :index="indice" :task="tarea"></li> <!-- Este componente hace referencia a una tarea puntual -->
     </ul>
 
     <p><a @click="deleteCompleted">Eliminar tareas completadas</a></p>
@@ -67,6 +38,39 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.js"></script>
+
+  <script  id="task-template" type="text/x-template">
+  <li class="list-group-item" :class="{ editing: task.editing, completed: !task.pending }">
+    <a @click="toggleStatus">
+      <app-icon :img="task.pending ? 'unchecked' : 'check' "></app-icon>
+    </a>
+
+    <template v-if="!task.editing">
+      <span class="description">{{ task.description }}</span>
+      <div>
+        <a @click="edit">
+          <app-icon img="edit"></app-icon>
+        </a>
+        <a @click="remove">
+          <app-icon img="trash"></app-icon>
+        </a>
+      </div>
+    </template>
+
+    <template v-else>
+      <input type="text" v-model="draft">
+      <div>
+        <a @click="update">
+          <app-icon img="ok"></app-icon>
+        </a>
+        <a @click="cancel">
+          <app-icon img="remove"></app-icon>
+        </a>
+      </div>
+    </template>
+  </li>
+  </script>
+
   <script src="js/main.js"></script>
 </body>
 </html>
